--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+
+body.dark-theme {
+  
+  color: rgb(255, 255, 255);
+  background-color: rgb(30, 41, 59);
+}
